; ModuleID = '/home/carl/AnghaBench/php-src/ext/standard/extr_user_filters.c_filter_item_dtor.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/standard/extr_user_filters.c_filter_item_dtor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.php_user_filter_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @filter_item_dtor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @filter_item_dtor(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.php_user_filter_data*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.php_user_filter_data* @Z_PTR_P(i32* %4)
  store %struct.php_user_filter_data* %5, %struct.php_user_filter_data** %3, align 8
  %6 = load %struct.php_user_filter_data*, %struct.php_user_filter_data** %3, align 8
  %7 = getelementptr inbounds %struct.php_user_filter_data, %struct.php_user_filter_data* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @zend_string_release_ex(i32 %8, i32 0)
  %10 = load %struct.php_user_filter_data*, %struct.php_user_filter_data** %3, align 8
  %11 = call i32 @efree(%struct.php_user_filter_data* %10)
  ret void
}

declare dso_local %struct.php_user_filter_data* @Z_PTR_P(i32*) #1

declare dso_local i32 @zend_string_release_ex(i32, i32) #1

declare dso_local i32 @efree(%struct.php_user_filter_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
